# Gruppe18_SoftwareEngineering

./: README.md  Untitled Diagram.drawio
Gruppe18_pyApp/: .coverage  app.py  coveragerc  drop_and_build_db.py  pyproject.toml  requests_testing.py  run.py
Gruppe18_pyApp/app/: app.py  routes.py  users.db
Gruppe18_pyApp/app_flask/: __init__.py  appDB.db  appDB.db-journal  db_sql.py  forms.py  goods.db  models.py  routes.py  temporary_app.py  users_v2.db
Gruppe18_pyApp/app_flask/auth/: __init__.py  forms.py  routes.py  use_cases.py
Gruppe18_pyApp/app_flask/main/: __init__.py  forms.py  routes.py  routes1.py  use_cases.py  use_cases1.py
Gruppe18_pyApp/app_flask/templates/: addGoods.html  addGoodsAuction.html  addGoodsStore.html  adminPanel.html  auction.html  base.html  index.html  login.html  registerStore.html  registerUser.html  showGoods.html  store.html  storePanel.html  users.html
Gruppe18_pyApp/app_flask/templates/include/: add_goods_auction_modal.html  add_goods_store_modal.html  auction_modal.html  bidding_modal.html  goods_modals.html
Gruppe18_pyApp/templates/: index.html
Gruppe18_pyApp/tests/: conftest.py  test_app.py  test_auth_forms.py  test_auth_routes.py  test_auth_routes20.py  test_auth_use_cases.py  test_db_sql.py  test_main_forms.py  test_main_routes.py  test_main_routes20.py  test_main_use_cases.py  test_main_use_cases20.py  test_models.py  test_routes.py
