[tool.poetry]
name = "gruppe18_pyapp"
version = "0.1.0"
description = ""
authors = ["Kristiankaspersen <kristian.kaspersen@hiof.no>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
pytest = "^6.2.5"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^0.15.1"
WTForms = "^2.3.3"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
