[tool.poetry]
name = "gruppe18_pyapp"
version = "0.1.0"
description = ""
authors = ["Kristiankaspersen <kristian.kaspersen@hiof.no>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
pytest = "^6.2.5"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^0.15.1"
WTForms = "^2.3.3"
bcrypt = "^3.2.0"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"
email-validator = "^1.1.3"
MarkupSafe = "^2.0.1"
pycparser = "^2.20"
colorama = "^0.4.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]

build-backend = "poetry.core.masonry.api"
